# STC_Test

./: CMakeLists.txt  PerfomanceOutput.xlsx  README.md
src/: DataGenerator.cpp  DataGenerator.h  SmaCalculator.h  SmaPerfomanceWriter.cpp  SmaPerfomanceWriter.h  main.cpp
